# llm-from-scratch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/samples/: README.md  simple-stories.txt
examples/: generate_simple.py  train_simple.py
notebooks/: 01_tokenization.ipynb  02_attention_mechanism.ipynb  03_transformer_blocks.ipynb  04_complete_gpt_model.ipynb  05_training_and_generation.ipynb
src/: __init__.py
src/llm/: __init__.py  attention.py  config.py  generation.py  model.py  tokenizer.py  trainer.py  transformer.py
tests/: __init__.py  test_attention.py  test_config.py  test_generation.py  test_model.py  test_tokenizer.py  test_trainer.py  test_transformer.py
